--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
 <h1>
-  {{title}}
+  Angular Animation Example
 </h1>
-<div>
- <div class="col-card__content-div">
-  <div [@detailsContentAnimation]="areDetailsVisible" class="card-block">
-    <ng-content select=".col-card__contentselector--body"></ng-content>
-  </div>
-</div>
+<app-card></app-card>
