Add styles and ng-content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <h1>
   Angular Animation Example
 </h1>
-<app-card></app-card>
+<app-card>
+
+  <p class="col-card__contentselector--body">
+    Yardarm long clothes Pirate Round nipper hulk six pounders Cat o'nine tails transom grog fluke. Knave maroon Spanish Main barkadeer pink nipper black spot scallywag belaying pin chase. Pink chantey lanyard gangplank loaded to the gunwalls bucko gun crimp hempen halter Nelsons folly.
+  </p>
+
+</app-card>
