Add body padding and more pirate ipsum

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <app-card>
 
   <p class="col-card__contentselector--body">
-    Yardarm long clothes Pirate Round nipper hulk six pounders Cat o'nine tails transom grog fluke. Knave maroon Spanish Main barkadeer pink nipper black spot scallywag belaying pin chase. Pink chantey lanyard gangplank loaded to the gunwalls bucko gun crimp hempen halter Nelsons folly.
+    Yardarm long clothes Pirate Round nipper hulk six pounders Cat o'nine tails transom grog fluke. Knave maroon Spanish Main barkadeer pink nipper black spot scallywag belaying pin chase. Pink chantey lanyard gangplank loaded to the gunwalls bucko gun crimp hempen halter Nelsons folly. Hulk draught dance the hempen jig lookout walk the plank provost ho keelhaul bilged on her anchor come about. Lass Arr spanker smartly tackle bowsprit lanyard rope's end piracy ahoy. Ho jack avast scuppers come about scourge of the seven seas capstan weigh anchor scurvy lookout.
   </p>
 
 </app-card>
